<resources>
    <string name="app_name">Project Board</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="signUp">Sign Up</string>
    <string name="retypePassword">Retype Password</string>
    <string name="passwordConstraints">*must have 8–20 chars,at least 1 uppercase,1 number,1 special char,1 lower case</string>
    <string name="userAlreadyPresentWarning">*User Name Already Present</string>
    <string name="emailAlreadyPresentWarning">*Email Already Present</string>
    <string name="passwordsMatchWarning">*Retype The Same Password</string>
    <string name="bottomNavHome">Home</string>
    <string name="bottomNavTasks">My Tasks</string>
    <string name="bottomNavProfile">My Profile</string>
    <string name="addBoard">Add A New Boards</string>
    <string name="boardName">Board Name</string>
    <string name="createdBy">Created By:</string>
    <string name="create">Create</string>
    <string name="Delete">Delete</string>
    <string name="creator">Creator</string>
    <string name="cancel">Cancel</string>
    <string name="required">*Required</string>
    <string name="update">UPDATE</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">Title</string>
    <string name="action_add_card">Add Task</string>
    <string name="hint_card_name">Task Name</string>
    <string name="add_list">Add List</string>
    <string name="todo">TODO</string>
    <string name="inProgress">IN PROGRESS</string>
    <string name="completed">COMPLETED</string>
    <string name="image_contentDescription">image</string>
    <string name="delete_member">Delete Member</string>
    <string name="assign_member">Assign A Member</string>
    <string name="leaveBoards">Leave Project</string>
    <string name="addMembers">Add Members</string>
    <string name="message">Message</string>
    <string name="label_color">Priority</string>
    <string name="members">Members</string>
    <string name="edit_board">Edit Board</string>
    <string name="sort_by_due_date">By Deadline</string>
    <string name="sort_by_priority">By Priority</string>
    <string name="select_color">Select Priority</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="logOut">Log Out</string>
    <string name="notification">Notifications</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="projects_in_common">Projects In Common</string>
    <string name="unknown">--Unknown--</string>
    <string name="noProjectsInCommon">No Projects In Common</string>
    <string name="you">You</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="YouArePartOfNoBoard">Join Board To Start Working!</string>
    <string name="myProfile">My Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="noTasksHaveBeenAssigned">No Tasks Have Been Assigned</string>
    <string name="saveChanges">Save Changes</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="retypeNewPassword">Retype New Password</string>
    <string name="save">Save</string>
    <string name="deadline">DeadLine</string>
    <string name="low_priority_tasks">Low Priority Tasks</string>
    <string name="medium_priority_tasks">Medium Priority Tasks</string>
    <string name="high_priority_tasks">High Priority Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="project_name">Project Name</string>
    <string name="status">Status</string>
    <string name="status_label">Status:</string>
    <string name="due_by">Due By</string>
    <string name="due_by_label">Due:</string>
    <string name="sort">Sort</string>
    <string name="task_Name_label">Task Name:</string>
    <string name="project_name_label">Project Name:</string>
    <string name="created_by_label">Created By:</string>
    <string name="current_status_label">Current Status:</string>
    <string name="assigned_to_label">Assigned To:</string>
    <string name="assigned_to">Assigned To</string>
    <string name="current_status">Current Status:</string>
    <string name="priority_label">Priority:</string>
    <string name="priority">Priority</string>
    <string name="created_on_label">Created On:</string>
    <string name="created_on">Created On</string>
    <string name="deadline_label">Due By:</string>
    <string name="change_status">Move Task To</string>

    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="designations">
        <item>Member Technical Staff</item>
        <item>Member Leadership Staff</item>
        <item>Project Trainee</item>
        <item>Lead Engineer</item>
        <item>Lead Manager</item>
        <item>Product Manager</item>
        <item>Associate Product Manager</item>
    </string-array>

    <string-array name="departments">
        <item>AppX-CRM-Mobile</item>
        <item>AppX-CRM-Android</item>
        <item>AppX-CRM-iOS</item>
        <item>AppX-CRM-QA</item>
        <item>AppX-CRM-Automation</item>
        <item>AppX-CRM-Designers</item>
        <item>AppX-CRM-Support</item>
        <item>AppX-CRM-CART</item>
        <item>AppX-CRM-Component</item>
    </string-array>

    <string-array name="my_profile_options">
        <item>My Profile</item>
        <item>Change Password</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="add_click_options">
        <item>Join A Board</item>
        <item>Create A New Board</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>