<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/Widget.Material3.CardView.Elevated"
    app:cardElevation="5dp"
    app:cardCornerRadius="12dp"
    android:layout_height="72dp"
    android:layout_width="match_parent"
    android:layout_margin="5dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cd_board_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_image_place_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/cd_board_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:textStyle="bold"
            android:text="@string/boardName"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/cd_board_image"
            app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cd_board_creator_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createdBy"
                    android:textSize="14sp"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toEndOf="@+id/cd_board_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cd_board_name"
                     />

        <TextView
            android:id="@+id/cd_board_creator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creator"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/cd_board_creator_label"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="3dp"/>
<!--            android:paddingStart="6dp"-->
<!--            android:paddingBottom="3dp"-->


    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>
