<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.DayNight"
    android:gravity="center"
    tools:context="com.example.boardsdraft.view.fragments.TaskDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_details_content_padding"
        android:layout_gravity="center">



        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/shape_button_curved_white"
                android:padding="@dimen/card_details_cv_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_Name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name_card_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_card_name"
                        android:inputType="text"
                        android:maxLength="15"
                        android:textSize="@dimen/et_text_size"
                        tools:hint="Title" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@drawable/shape_button_curved_white"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/select_priority_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView

                        android:id="@+id/selectPriorityColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_color"
                        android:textSize="@dimen/et_text_size" />


                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/select_member_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView

                        android:id="@+id/select_member_for_task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/assign_member"
                        android:textSize="@dimen/et_text_size" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_select_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_due_date"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/round_calendar_month_24"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update_card_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/card_details_update_btn_marginTop"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textSize="@dimen/btn_text_size" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
